@@ -3,10 +3,15 @@
 
 package = debdelta
 
-D = debian/tmp
+D = debian/debdelta
 
 docdir = $(D)/usr/share/doc/$(package)
 mandir = $(D)/usr/share/man/man1/
+
+D2 = debian/debdelta-doc
+
+docdir2 = $(D2)/usr/share/doc/$(package)
+docdir2doc = $(D2)/usr/share/doc/$(package)-doc
 
 CC = gcc
 CFLAGS = -g -Wall
@@ -32,13 +37,21 @@ clean:
 	$(checkdir)
 	rm -f build *~ */*~ debian/files* debian/substvars
 	rm -f minigzip minibzip2
-	rm -rf $(D)
+	rm -rf $(D) $(D2)
 
 binary-indep:	checkroot build
 	$(checkdir)
-# There are no architecture-independent files to be uploaded
-# generated by this package.  If there were any they would be
-# made here.
+	rm -rf $(D2)
+	install -d $(D2)/DEBIAN  $(docdir2)  $(docdir2doc)
+	cp doc/debdelta_suite.pdf debian/copyright debian/changelog $(docdir2doc)
+	cd $(docdir2doc) && gzip -9 changelog
+	cp -r doc/html  $(docdir2doc)
+	ln -s ../debdelta-doc/debdelta_suite.pdf  $(docdir2)
+	ln -s ../debdelta-doc/html  $(docdir2)
+	# build package
+	dpkg-gencontrol -Pdebian/debdelta-doc -pdebdelta-doc
+	chown -R root:root $(D2)
+	dpkg-deb --build $(D2) ..
 
 binary-arch:	checkroot build
 	$(checkdir)
@@ -72,16 +85,15 @@ binary-arch:	checkroot build
 	ln -s debdelta  $(D)/usr/bin/debdeltas
 	ln -s debdelta  $(D)/usr/bin/debdelta-upgrade
 	# /usr/share/doc
-	cp FAQ README README.upgrade README.features debian/copyright debian/changelog $(docdir)
-	cd $(docdir) && gzip -9 changelog README README.upgrade FAQ
+	cp FAQ README.features debian/copyright debian/changelog $(docdir)
+	cd $(docdir) && gzip -9 changelog FAQ
 	# man
 	cp *.1 $(mandir)
 	gzip -9 $(mandir)/*.1 
 	# build package
 	dpkg-shlibdeps $(D)/usr/lib/debdelta/minigzip  $(D)/usr/lib/debdelta/minibzip2
-	dpkg-gencontrol -isp
+	dpkg-gencontrol -Pdebian/debdelta -pdebdelta
 	chown -R root:root $(D)
-	#chmod -R u+w,go=rX $(D)
 	dpkg-deb --build $(D) ..
 
 define checkdir
